add styles and index.js

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,3 +1,10 @@
+.container {
+  width: 1280px;
+  padding-left: 32px;
+  padding-right: 32px;
+  margin: 0 auto;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -14,4 +21,18 @@ p,
 ul {
   margin: 0;
   padding: 0;
+}
+
+.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
