--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
     <section class="footer-container">
         <p>&#169 2020 | All Rights Reserved | Developed with
             <svg class="footer-svg" width="14" height="13">
-                <use href="../images/sprite.svg#icon-heart"></use>
+                <use href="./images/sprite.svg#icon-heart"></use>
             </svg>
             <a href="">by GoIT Students</a></p>
     </section>
