--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,4 +2,4 @@
 @import './base/base';
 @import './components/main-gallery';
 @import './components/header';
-@import './base/footer';
+@import './components/footer';
