--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -10,6 +10,9 @@
       rgba(0, 0, 0, 0.5)
     ),
     url(../images/header/home-header-desk@2x.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .header__nav {
@@ -17,4 +20,98 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.header__link {
+  display: inline-flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  text-decoration: none;
+}
+
+.header__text {
+  margin-left: 10px;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 35px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #ffffff;
+}
+
+.header__list {
+  display: flex;
+  gap: 39px;
+}
+
+.header__item {
+  list-style: none;
+}
+
+.header_home_btn {
+  cursor: pointer;
+  background-color: inherit;
+  border: none;
+  padding: 0;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.header_library_btn {
+  cursor: pointer;
+  background-color: inherit;
+  border: none;
+  padding: 0;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.form {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form__input {
+  min-width: 394px;
+
+  color: inherit;
+  background-color: transparent;
+  border: none;
+  border-bottom: 0.5px solid #ffffff;
+}
+
+.form__btn {
+  position: relative;
+  left: -18px;
+  bottom: -3px;
+
+  padding: 15px 0;
+
+  border: none;
+  background-color: transparent;
+  color: transparent;
 }
