finish static header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
             </a>
             <ul class="header__list">
                 <li class="header__item">
-                   <button class="header_home_btn" type="button">Home</button>
+                   <button class="header_home_btn current" type="button">Home</button>
                 </li>
                 <li class="header__item">
                    <button class="header_library_btn" type="button">my library</button>
