--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,9 @@
 <footer>
     <section class="footer-container">
-        <p>&#169 2020 | All Rights Reserved | Developed with
-            <svg class="footer-svg" width="14" height="13">
-                <use href="./images/sprite.svg#icon-heart"></use>
-            </svg>
-            <a href="">by GoIT Students</a></p>
+        <p><span class="copyrite">&#169</span> 2020 | All Rights Reserved | Developed with
+            <svg class="footer-svg" width="22" height="14">
+                <use class="fopter-svg" href="./images/sprite.svg#icon-heart" width="22" height="22"></use>
+            </svg>by
+            <a class="footer-link" href="#">GoIT Students</a></p>
     </section>
 </footer>
