--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,12 +1,39 @@
 .footer-container {
     display: flex;
     flex-wrap: wrap;
-    margin: 0, auto;
-    padding: 0, 36px;
-
+    justify-content: center;
+    text-align:center ;
+    padding: 0 36px;
+    height: 100px;
+    
+    background-color: $secondary-bg-color;
+    font-family: $fontPrimary;
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.14;
+    line-height: 2.14;
     align-items: center;
-    text-align: center;
+    color: $footer-text-color;
+
+    // @media screen and (min-width: 480px) {
+    //     padding: 0 143px;
+    // }
+
+    @media screen and (min-width: 769px) {
+        padding: 0 143px;
+    }
+    @media screen and (min-width: 1200px) {
+        padding: 0 390px;
+    }
+
+}
+.footer-link {
+    color: $footer-text-color;
+}
+.footer-svg {
+    margin-right: 3px;
+    margin-left: 2px;
+}
+
+.copyrite {
+    margin-right: 4px;
 }
