--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <section class="footer-container">
-        <p><span class="copyrite">&#169</span> 2020 | All Rights Reserved | Developed with
+        <p><span class="copyrite">&#169</span><span class="year">2020</span> | All Rights Reserved | Developed with
             <svg class="footer-svg" width="22" height="14">
                 <use class="fopter-svg" href="./images/sprite.svg#icon-heart" width="22" height="22"></use>
             </svg>by
