--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -10,5 +10,8 @@ $secondary-bg-color: #F7F7F7;
 $header-bg-color: rgba(0, 0, 0, 0.56);
 $modal-bg-color: rgba(0, 0, 0, 0.25);
 
-
 $fontPrimary: Roboto, sans-serif;
+
+$mobile: 320px;
+$tablet: 768px;
+$desktop: 1280px
