--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -14,11 +14,11 @@
     align-items: center;
     color: $footer-text-color;
 
-    @media screen and (min-width: 769px) {
-        padding: 0 143px;
+    @media screen and (min-width: 768px) {
+        font-size: 16px;
     }
     @media screen and (min-width: 1200px) {
-        padding: 0 390px;
+        // padding: 0 390px;
     }
 
 }
