add queue buttons

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,5 +29,9 @@
                 </svg>
             </button>
         </form>
+       <div class="library is-hidden">
+        <button class="library__btn btn-js-active" type="button">Watched</button>
+        <button class="library__btn" type="button">Queue</button>
+       </div>
     </div>
 </header>
