--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,8 +1,18 @@
 .container {
-  width: 1280px;
-  padding-left: 32px;
-  padding-right: 32px;
+  max-width: $mobile;
+  padding-left: 20px;
+  padding-right: 20px;
   margin: 0 auto;
+
+  @media screen and (min-width: $tablet) {
+    max-width: $tablet;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    max-width: $desktop;
+  }
 }
 
 img {
