--- a/src/sass/components/_main-gallery.scss
+++ b/src/sass/components/_main-gallery.scss
@@ -1,47 +1,42 @@
-
 .movie-cards__list {
   margin-bottom: 40px;
   display: flex;
   flex-wrap: wrap;
-  width: 445px;
-  height: 280px;
+  justify-content: flex-start;
 
   @media screen and (min-width: $tablet) {
     margin-bottom: 50px;
-    margin: -15px;
-  }
-  @media screen and (min-width: $desktop) {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -15px;
   }
 }
+
 .movie-card__item {
+  min-width: $mobile;
   margin-bottom: 20px;
+  margin-top: 20px;
 
   @media screen and (min-width: $tablet) {
-    margin-bottom: 0px;
     margin: 15px;
     flex-basis: calc((100% - 60px) / 2);
     position: relative;
     margin-bottom: 0px;
   }
+
   @media screen and (min-width: $desktop) {
     margin: 15px;
     flex-basis: calc((100% - 90px) / 3);
     position: relative;
+    transition: transform var(--);
   }
   &:hover,
   &:focus {
-    transform: scale(1.05);
+    transform: scale(1.02);
 
     .movies__img {
-      filter: saturate(165%);
+      filter: saturate(200%);
       box-shadow: 0 0 20px rgba(107, 46, 6, 0.7);
     }
   }
 }
-// ====================
 
 .movie-card {
   height: auto;
@@ -56,11 +51,12 @@
     }
   }
 }
+
 .movies__img {
   border-radius: 5px;
   cursor: pointer;
-  filter: drop-shadow(1px 1px 1px rgba(55%, 55%, 55%, 0.4));
-  filter: none;
+  filter: drop-shadow(2px 2px 2px rgba(50%, 50%, 50%, 1.0));
+
   width: 280px;
   height: 400px;
   @media screen and (min-width: $tablet) {
@@ -80,7 +76,7 @@
   font-style: 500;
   font-size: 12px;
   line-height: 1.2;
-  color: var(--);
+  color: $primary-text-color;
   margin-top: 10px;
   margin-bottom: 3px;
   text-transform: uppercase;
@@ -96,7 +92,7 @@
   font-size: 12px;
   line-height: 1.3;
   font-style: 500;
-  color: var(--);
+  color: $primary-color;
   margin-right: 5px;
 }
 .info-item-year {
@@ -104,7 +100,7 @@
   font-size: 12px;
   line-height: 1.3;
   font-style: 500;
-  color: var(--);
+  color: $primary-color;
   margin-right: 5px;
 }
 
@@ -120,16 +116,22 @@
 
 .info-item-language {
   border-radius: 5px;
-  background-color: var(--);
-  color: var(--);
+  background-color: $primary-color;
+  color: $secondary-text-color;
   margin-right: 10px;
   text-align: center;
-  font-size: 12px;
+  font-size: 14px;
 
   width: 40px;
 }
 
 .info-item-rating {
-  color: var(--);
+  display: flex;
+  outline: 2px solid tomato;
+  color: $secondary-text-color;
+  background-color: $primary-color;
   font-size: 12px;
+  text-align: center;
+  border-radius: 5px;
+  width: 42px;
 }
