--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -12,6 +12,8 @@ $modal-bg-color: rgba(0, 0, 0, 0.25);
 
 $fontPrimary: Roboto, sans-serif;
 
+$transitionAll: all 0.2s;
+
 $mobile: 320px;
 $tablet: 768px;
 $desktop: 1280px
