--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -20,6 +20,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @media screen and (min-width: $tablet) {
+    width: 100%;
+    gap: 900px;
+  }
 }
 
 .header__link {
