--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -15,6 +15,23 @@
   background-repeat: no-repeat;
 }
 
+.header__is-active {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  height: 216px;
+
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url(../images/header/library-header-desk@2x.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .header__nav {
   margin-top: 40px;
   display: flex;
