--- a/src/sass/components/_main-gallery.scss
+++ b/src/sass/components/_main-gallery.scss
@@ -1,39 +1,34 @@
 .movie-cards__list {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  margin-top: 20px;
   margin-bottom: 40px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
 
   @media screen and (min-width: $tablet) {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 32px;
+    margin-top: 60px;
     margin-bottom: 50px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 16px;
   }
 }
 
 .movie-card__item {
-  min-width: $mobile;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  position: relative;
+  // min-width: $mobile;
+  margin: 5px;
   transition: $transitionAll;
 
-  @media screen and (min-width: $tablet) {
-    margin: 15px;
-    flex-basis: calc((100% - 60px) / 2);
-    position: relative;
-    margin-bottom: 0px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    margin: 15px;
-    flex-basis: calc((100% - 90px) / 3);
-    position: relative;
-    transition: transform var(--);
-  }
   &:hover,
   &:focus {
     transform: scale(1.02);
 
     .movies__img {
-      filter: saturate(200%);
+      filter: saturate(175%);
       box-shadow: 0 0 20px rgba(107, 46, 6, 0.7);
     }
   }
@@ -58,8 +53,8 @@
   cursor: pointer;
   filter: drop-shadow(2px 2px 2px rgba(50%, 50%, 50%, 1));
 
-  width: 280px;
-  height: 400px;
+  // width: 280px;
+  // height: 400px;
   @media screen and (min-width: $tablet) {
     min-width: 293px;
   }
@@ -106,33 +101,31 @@
 }
 
 .language-rating {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  justify-content: flex-start;
-  padding-right: 10px;
-  padding-left: 5px;
-  margin-bottom: 10px;
+  font-size: 12px;
+  opacity: 0.75;
 }
 
 .info-item-language {
-  border-radius: 5px;
+  position: absolute;
+  top: 2%;
+  left: 2%;
+  display: flex;
+  justify-content: center;
+  width: 35px;
+  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 15% 50%, 0% 0%);
   background-color: $primary-color;
   color: $secondary-text-color;
-  margin-right: 10px;
-  text-align: center;
-  font-size: 14px;
-
-  width: 40px;
+  
 }
 
 .info-item-rating {
+  position: absolute;
+  top: 2%;
+  right: 2%;
   display: flex;
-  outline: 2px solid tomato;
+  justify-content: center;
+  width: 45px;
   color: $secondary-text-color;
   background-color: $primary-color;
-  font-size: 12px;
-  text-align: center;
-  border-radius: 5px;
-  width: 42px;
+  clip-path: polygon(100% 0,90% 50%,100% 100%,25% 100%,10% 50%,25% 0);
 }
