--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,6 +9,8 @@
             </a>
             <ul class="header__list">
                 <li class="header__item">
+                </li>
+                <li class="header__item">
                    <button class="header__btn header_home_btn current" type="button">Home</button>
                 </li>
                 <li class="header__item">
