--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,3 +4,4 @@
 @import './components/main-gallery';
 @import './components/header';
 @import './components/footer';
+@import './components/theme-btn.scss';
