--- a/src/partials/main-galery.html
+++ b/src/partials/main-galery.html
@@ -1,5 +1,7 @@
 <main>
   <div class="container">
     <ul class="movie-cards__list"></ul>
+    <div class="backdrop is-hidden"></div>
+    <div class="spinner"></div>
   </div>
 </main>
