add contact and sing up btn

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,6 @@
             </a>
             <ul class="header__list">
                 <li class="header__item">
-
                     <div class="theme__container">
                         <div class="sun sun-logo">
                             <svg class="sun__fill" viewBox="0 0 512 512" width="24" height="24" title="sun">
@@ -30,6 +29,12 @@
                 </li>
                 <li class="header__item">
                    <button class="header__btn header_library_btn" type="button">my library</button>
+                </li>
+                <li class="header__item">
+                    <button class="header__btn header_contact_btn" type="button">Contacts</button>
+                </li>
+                <li class="header__item">
+                    <button class="header__btn header_singup_btn" type="button">Sign Up</button>
                 </li>
             </ul>
         </nav>
