--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,16 +25,16 @@
                     </div>
                 </li>
                 <li class="header__item">
-                   <button class="header__btn header_home_btn current" type="button">Home</button>
+                   <a href="./index.html" class="header__ref header__home-link current">Home</a>
                 </li>
                 <li class="header__item">
-                   <button class="header__btn header_library_btn" type="button">my library</button>
+                   <a class="header__ref header__library-link">my library</a>
                 </li>
                 <li class="header__item">
-                    <button class="header__btn header_contact_btn" type="button">Contacts</button>
+                    <a class="header__ref header__contact-link">Contacts</a>
                 </li>
                 <li class="header__item">
-                    <button class="header__btn header_singup_btn" type="button">Sign Up</button>
+                    <a class="header__ref header__singup-link">Sign Up</a>
                 </li>
             </ul>
         </nav>
