--- a/src/partials/main-galery.html
+++ b/src/partials/main-galery.html
@@ -2,6 +2,8 @@
   <div class="container">
     <ul class="movie-cards__list"></ul>
     <div class="backdrop is-hidden"></div>
-    <div class="spinner"></div>
+    <div class="loadingSpinner">
+      <div class="dot"></div>
+      <div class="dot2"></div>
   </div>
 </main>
