--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,3 +6,4 @@
 @import './components/footer';
 @import './components/theme-btn.scss';
 @import './components/spinner';
+@import './components/header-library-emty';
