--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,3 +7,4 @@
 @import './components/theme-btn.scss';
 @import './components/spinner';
 @import './components/header-library-emty';
+@import './components/team-modal';
