--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,7 @@
                    <a class="header__ref header__library-link">my library</a>
                 </li>
                 <li class="header__item">
-                    <a class="header__ref header__contact-link">Contacts</a>
+                    <a href="./team-modal.html" class="header__ref header__contact-link">Contacts</a>
                 </li>
                 <li class="header__item">
                     <a class="header__ref header__singup-link">Sign Up</a>
