create scroll to top

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
 $primary-text-color: #000000;
 $secondary-text-color: #FFFFFF;
-$primary-color: #FF6B08;
+$primary-color: #ff6b08;
 $accent-color: #FF001B;
 $footer-text-color: #545454;
 
