--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,5 +8,4 @@
 @import './components/spinner';
 @import './components/header-library-emty';
 @import './components/team-modal';
-
-
+@import './components/scroll';
