--- a/src/sass/components/_theme-btn.scss
+++ b/src/sass/components/_theme-btn.scss
@@ -16,16 +16,16 @@
 .moon-logo {
   opacity: 0;
   transform: translateY(20%) rotateZ(50deg);
-  transition: all 1s ease-out;
+  transition: all 250ms ease-out;
 }
 .sun-logo {
   opacity: 1;
   transform: translateY(0) rotateZ(0deg);
-  transition: all 1s ease-out;
+  transition: all 250ms ease-out;
 }
 .animate-sun {
   opacity: 0;
-  transform: translateY(20%) rotateZ(100deg);
+  transform: translateY(0%) rotateZ(100deg);
 }
 .animate-moon {
   opacity: 1;
