add some changes

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,7 +34,9 @@
                     <a class="header__ref header__contact-link">Contacts</a>
                 </li>
                 <li class="header__item">
-                    <a class="header__ref header__singup-link">Sign Up</a>
+                    <div class="header__btn-container">
+                    <a class="header__ref header__singup-link header__btn-signup">Sign in</a>
+                    </div>
                 </li>
             </ul>
         </nav>
@@ -51,6 +53,7 @@
                 </svg>
             </button>
         </form>
+        <p class="failure-message"></p>
        <div class="library is-hidden">
         <button class="library__btn watch__btn" type="button">Watched</button>
         <button class="library__btn queue__btn" type="button">Queue</button>
