add modal open and close

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,3 +9,4 @@
 @import './components/header-library-emty';
 @import './components/team-modal';
 @import './components/scroll';
+@import './components/modal-card-open';
